--- a/index.html
+++ b/index.html
@@ -206,15 +206,10 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>                    
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <span class="fa fa-pause" id="carousel-button-icon"></span>
+                    </button>
                 </div> 
-                <div class="btn-group" id="carouselButton">
-                    <button class="btn btn-danger btn-sm" id="carousel-pause">
-                	    <span class="fa fa-pause"></span>
-                    </button>
-                    <button class="btn btn-danger btn-sm" id="carousel-play">
-                	    <span class="fa fa-play"></span>
-                    </button>
-                </div>
              </div>
         </div>
                 
@@ -314,14 +309,17 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script>
-        $(document).ready(function(){
-            $("#mycarousel").carousel( { interval: 2000 } );
-            $("#carousel-pause").click(function(){
+        $("#carouselButton").click(function(){
+            if ($("#carouselButton").children("span").hasClass('fa-pause')) {
                 $("#mycarousel").carousel('pause');
-            });
-            $("#carousel-play").click(function(){
+                $("#carouselButton").children("span").removeClass('fa-pause');
+                $("#carouselButton").children("span").addClass('fa-play');
+            }
+            else if ($("#carouselButton").children("span").hasClass('fa-play')){
                 $("#mycarousel").carousel('cycle');
-            });
+                $("#carouselButton").children("span").removeClass('fa-play');
+                $("#carouselButton").children("span").addClass('fa-pause');                    
+            }
         });
     </script>
 
